# csad2526ki405denysdumitrashchuk11

./: CMakeLists.txt  README.md  ci.bat  ci.sh  copilot.log.md
.github/workflows/: ci.yml
tests/: unit_tests.cpp
